--- a/src/container.css
+++ b/src/container.css
@@ -52,3 +52,10 @@
     background-color: rgba(255, 255, 255, 0.5);
     z-index: 999;
 }
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
