--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -35,6 +35,23 @@
     font-style: normal;
 }
 
+.green_planet_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 120px;
+    height: 82px;
+}
+
+.green_planet_container > img {
+    margin-bottom: 10px;
+}
+
+.green_planet_container > span {
+    text-align: center;
+    font-size: 16px;
+}
+
 .complaint_container {
     display: flex;
     flex-direction: column;
@@ -43,7 +60,7 @@
 }
 
 .complaint_container > span {
-    font-size: 18px;
+    font-size: 16px;
     margin-top: 10px;
 }
 
@@ -64,6 +81,6 @@
 
 .phone_icon {
     width: 30px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
