--- a/src/container.css
+++ b/src/container.css
@@ -3,17 +3,18 @@
     text-align: center;
     box-sizing: border-box;
     max-width: 400px;
+    max-height: 390px;
     border-radius: 10px;
-    padding: 20px;
+    padding: 10px;
     background-color: #d6d7dc;
     margin-right: 40px;
 }
 
 .name {
-    margin: 20px 5px;
+    margin: 10px 5px;
     font-size: 21px;
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 5px;
     align-items: center;
     text-align: center;
     background-color: #9c6dea;
@@ -21,14 +22,14 @@
 
 .items {
     display: flex;
-    margin-top: 50px;
-    margin-left: 30px;
+    margin-top: 20px;
+    margin-left: 20px;
 }
 
 .add_basket {
-    width: 200px;
-    height: 50px;
-    border-radius: 10px;
+    width: 150px;
+    height: 45px;
+    border-radius: 5px;
     border: none;
     font-size: 20px;
     padding: 10px;
@@ -51,6 +52,10 @@
     left: 0;
     background-color: rgba(255, 255, 255, 0.5);
     z-index: 999;
+}
+
+.main_container {
+    display: flex;
 }
 
 .footer {
