--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
+    font-family: 'Nunito Sans', sans-serif;
 }
 
 :focus, :active {
@@ -70,3 +71,5 @@ h1, h2, h3, h4, h5, h6 {
     font-size: inherit;
     font-weight: 400;
 }
+
+
